# cmake-build-botan-lib

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  readme.md
src/: CMakeLists.txt  main.cpp
src/minimal/: CMakeLists.txt
